--- a/terms.html
+++ b/terms.html
@@ -32,3 +32,7 @@ title: Terms of Service and Conditions
 <p>Gokulam Biotech may revise these terms of service for its website at any time without notice. By using this website you are agreeing to be bound by the then current version of these terms of service.</p>
 <h3>8. Governing Law</h3>
 <p>These terms and conditions are governed by and construed in accordance with the laws of India and you irrevocably submit to the exclusive jurisdiction of the courts in that State or location.</p>
+<h3>9. Copyright Notice</h3>
+<p>
+  Most of the content available in this website belongs to Gokulam Biotech Entreprise. External information such as photos, links to other websites are freely available in the Internet. If you want to report, remove such content which you think belongs to you, you may report it to <a href="mailto:admin@gokulambiotech.com"> admin@gokulambiotech.com </a>
+</p>
