--- a/products.html
+++ b/products.html
@@ -68,3 +68,4 @@ description: All products have minimum 1 year shelf-life.
   <h2 class="editable"><strong>Gokulam Biotech</strong> - Comprehensive Product List</h2>
   <div class="button alt"><a href="/download/Gokulam-eBook.pdf">Products Book</a></div>
 </section>
+</div>
