--- a/products.html
+++ b/products.html
@@ -36,7 +36,7 @@ description: All products have minimum 1 year shelf-life.
 
 		<div class="text-container">
 			<a href="/download/Gokulam-eBook.pdf">
-				<img src="/images/products/gokulambiotechproducts.png"/>
+				<img src="/images/products/gokulambiotechproducts.png" alt="Gokulam Biotech Products"/>
 			</a>
 		</div>
 		<div class="productplans">
