--- a/careers.html
+++ b/careers.html
@@ -3,7 +3,15 @@ title: Careers
 heading: We are looking for Talented People
 description: Every employee is treated equally in our company. 70% of our workforce is Women.
 
+
 positions:
+  - name: No open positions!
+    color: "#8e8e8e"
+    info:
+      - text: Thanks for your interest!
+        highlight: true
+
+closed-positions:
   - name: Open Position
     color: "#8e8e8e"
     info:
@@ -27,6 +35,8 @@ future-positions:
       - text: location - North India
 
 faq:
+  - question: I do not find any open positions to apply?
+    answer: Thanks for your interest. At this moment, we do not have any openings, we ask to check this page often to find more updated information.
   - question: How do I apply for the job?
     answer: Send your cv and a coverletter to the contact our HR email address <a href="mailto:hr@gokulambiotech.com">hr@gokulambiotech.com</a>.
   - question: How many days it might take to get a response?
