new blog post-gokulam-tour

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@ description: Leading Bio-Fertilizer Manufacturer in India
 			liquid based formulations of bio products such as bio fertilizers, bio
 			pesticides and bio fungicides.</p>
 		<div>
-			<img src="/images/biofarm.jpg" alt="biofarm"/>
+			<a href="/products">
+				<!-- <img src="/images/products/new-GK-products.jpg" alt="biofarm"/> -->
+				<img src="/images/biofarm.jpg" alt="biofarm"/>
+			</a>
 		</div>
 	</div>
 </section>
@@ -25,7 +28,9 @@ description: Leading Bio-Fertilizer Manufacturer in India
 			</div>
 			<br />
 			<div class="image">
+				<a href="/products">
 				<img src="/images/tn-farming.jpg"/ alt="farmer">
+				</a>
 				<a href="https://www.flickr.com/photos/tataimitra/9421742217/" target="_blank">Source: Flickr</a>
 			</div>
 		</div>
@@ -35,7 +40,9 @@ description: Leading Bio-Fertilizer Manufacturer in India
 		<div class="container flex">
 			<div class="testimonial-block">
 				<div class="image">
+					<a href=/blog/>
 					<img src="/images/ResearchProcess.svg" alt="research process">
+				</a>
 				</div>
 				<blockquote>
 					<h2>Gokulam Biotech's <strong> Scientists research and develop</strong> state-of-the-art solutions.</h2>
