grub guard added

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ description: Leading Bio-Fertilizer Manufacturer in India
 	</section>
 
 	<section class="bottom-cta">
-		<h2 class="editable"><strong>Improve</strong> your harvesting process today</h2>
+		<h2 class="editable"><strong>Improve</strong> your harvest using organic products</h2>
 		<div class="button alt"><a href="contact/">Contact Us</a></div>
 	</section>
 </div>
