security, blog, management updates

--- a/careers.html
+++ b/careers.html
@@ -1,19 +1,19 @@
 ---
 title: Careers
 heading: We are looking for Talented People
-description: Every employee is treated equally in our company. 70% of our workforce is Women.
+description: Every employee is treated equally in our company. Approximately, 70% of our workforce is Women.
 
 
 positions:
   - name: No open positions!
-    color: "#8e8e8e"
+    color: "#298e0c"
     info:
       - text: Thanks for your interest!
         highlight: true
 
 closed-positions:
   - name: Open Position
-    color: "#8e8e8e"
+    color: "#298e0c"
     info:
       - text: Knowledge about Plant Biotechnology
         highlight: true
@@ -21,7 +21,7 @@ closed-positions:
 
 future-positions:
   - name: PhD Student
-    color: "#8e8e8e"
+    color: "#298e0c"
     info:
       - text: Salary > $25 per month
         highlight: true
