--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@ description: Leading Bio-Fertilizer Manufacturer in India
 <section class="hero">
 	<div class="text-container">
 		<h1 class="editable"><strong>Gokulam Biotech</strong></h1>
-		<p class="subtext editable"> is <strong> pioneer </strong> in the field of
+		<p class="subtext editable"> We are <strong> pioneers </strong> in the field of
 			liquid based formulations of bio products such as bio fertilizers, bio
 			pesticides and bio fungicides.</p>
+		
 		<div>
 			<a href="/products">
-				<!-- <img src="/images/products/new-GK-products.jpg" alt="biofarm"/> -->
-				<img src="/images/biofarm.jpg" alt="biofarm"/>
+				<img src="/images/products/new-GK-products.jpg" alt="bioproducts"/>
 			</a>
 		</div>
 	</div>
@@ -46,7 +46,10 @@ description: Leading Bio-Fertilizer Manufacturer in India
 				</div>
 				<blockquote>
 					<h2>Gokulam Biotech's <strong> Scientists research and develop</strong> state-of-the-art solutions.</h2>
-					<p class="editable"> check out our success stories in the <a href="/blog/" target="_blank">Blog section</a> </p>
+					<p class="editable"> check out our success stories: </p>
+					<br />
+					<br />
+				<div class="button home"><a href="/blog/">Testimonials</a></div>
 				</blockquote>
 			</div>
 		</div>
