--- a/products.html
+++ b/products.html
@@ -34,17 +34,12 @@ description: All products have minimum 1 year shelf-life.
       {% endfor %}
     </div>
 
-		<div class="text-container">
-			<a href="/download/Gokulam-eBook.pdf">
-				<img src="/images/products/new-GK-products.jpg" alt="Gokulam Biotech Products"/>
-			</a>
-		</div>
 		<div class="productplans">
 		{% for link in site.data.navigation %}
 		{% if link.subfolder[0] %}
 		{% for entry in link.subfolder %}
 				<ul class="plan">
-				<li style="background: #8e8e8e">
+				<li style="background: #298e0c">
 					<h3>{{ entry.page }}</h3>
 					{% for product in site.products %}
 					{% if product.type == entry.type %}
@@ -69,6 +64,6 @@ description: All products have minimum 1 year shelf-life.
 
 <section class="bottom-cta">
   <h2 class="editable"><strong>Gokulam Biotech</strong> - Comprehensive Product List</h2>
-  <div class="button alt"><a href="/download/Gokulam-eBook.pdf">Products Book</a></div>
+  <div class="button alt"><a href="/download/Gokulam-eBook.pdf">Download Products Booklet</a></div>
 </section>
 </div>
