updated cookie policies in terms and conditions and updated discuss loading

--- a/terms.html
+++ b/terms.html
@@ -36,3 +36,7 @@ title: Terms of Service and Conditions
 <p>
   Most of the content available in this website belongs to Gokulam Biotech Entreprise. External information such as photos, links to other websites are freely available in the Internet. If you want to report, remove such content which you think belongs to you, you may report it to <a href="mailto:admin@gokulambiotech.com"> admin@gokulambiotech.com </a>
 </p>
+<h4>10. Cookies</h4>
+<p>
+   We respect privacy. Only when the user accepts our cookies and terms and conditions, we allow Google Analytics cookies for tracking people visiting our website. The data collected is stored for 2 years and deleted on request. In addition, in the blog section to enable chatting functionality we use discuss platform and their related cookies. For more information on discuss we request the user to refer to their cookie policies.
+</p>
