fixed design issues on the stopping page

--- a/shop.html
+++ b/shop.html
@@ -4,24 +4,32 @@ layout: default
 ---
 
 {% for product in site.products %}
-{% if product.price %}
 {% if product.shop %}
+
 <div class="content">
 	<section class="page">
-		<div class="container">
-			<div class="product-container">
-				{% include product-styles.html product=product %}
-				<div class="product-details" id="add">
+		<div class="box">
+			<div class="row">
+				<div class="col-xs-1">
+					<!-- empty to center content -->
+				</div>
+				<div class="col-xs-3">
+					{% include product-styles.html product=product %}
+				</div>
+				<div class="col-xs">
 					<h3><a href="{{ product.url }}">{{ product.name }}</a></h3>
-					{{ product.description_markdown | markdownify }}
+					Note: Click the link above for detailed information on the product.
 					{% for size in product.sizes %}
-						<h4> {{size.type}} = ₹{{ size.price }} - {% include snipcart-button.html product=product size=size %}</h4>
+					{% include snipcart-button.html product=product size=size %}
 					{% endfor %}
+				</div>
+				<div class="col-xs-1">
+					<!-- empty to center content -->
 				</div>
 			</div>
 		</div>
 	</section>
 </div>
-{% endif %}
+
 {% endif %}
 {% endfor %}
