--- a/search.html
+++ b/search.html
@@ -1,13 +1,25 @@
 ---
 layout: default
 ---
-<form action="/search" method="get">
-  <label for="search-box">Search</label>
-  <input type="text" id="search-box" name="query">
-  <input type="submit" value="search">
-</form>
+<div class="content">
 
-<ul id="search-results"></ul>
+  <section class="page">
+    <div class="box">
+      <div class="row">
+        <div class="col-xs-3">
+        </div>
+        <div class="col-xs-5">
+          <form action="/search" method="get">
+            <input type="text" id="search-box" name="query">
+            <input type="submit" value="search">
+          </form>
+        </div>
+      </div>
+      <div class="col-xs-3"></div>
+      <ul id="search-results"></ul>
+    </div>
+  </section>
+</div>
 
 <script>
   window.store = {
