full product images added

--- a/products.html
+++ b/products.html
@@ -5,6 +5,7 @@ description: All products have minimum 1 year shelf-life.
 ---
 
 <div class="content">
+
 	<section class="page">
 		<div class="container {% if page.full_width %}max-container{% endif %}">
 			{% if page.heading %}
@@ -15,6 +16,12 @@ description: All products have minimum 1 year shelf-life.
 			{% if page.description %}
 			<p class="subtext">{{ page.description }}</p>
 			{% endif %}
+
+			<div class="image">
+				<a href="/products">
+				<img src="/images/products/Gokulam-products.jpg"/ alt="Gokulam Products">
+				</a>
+			</div>
 		</div>
 
 		<div class="container">
