bio composting and fertilizer products added

--- a/products.html
+++ b/products.html
@@ -58,9 +58,9 @@ description: All products have minimum 1 year shelf-life.
 						<mark>New:</mark>
 						{% endif %}
 						{{ product.name}}
-						{% if product.shop %}
+						<!-- {% if product.shop %}
 						<mark class="online"> - Onlineshop</mark>
-						{% endif %}
+						{% endif %} -->
 					</a>
 				</li>
 				{% endif %}
